# mashup-hour

./: .gitignore  Cargo.toml
mashup-hour-frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json
mashup-hour-frontend/src/: App.css  App.tsx  index.css  sampleData.ts
mashup-hour-frontend/src/components/: util.ts
mashup-hour-frontend/src/components/common/: TextScrollOnOverflow.tsx  index.ts
mashup-hour-frontend/src/components/controllers/: Button.tsx  Casing.tsx  EmptyCasing.tsx  InvisibleCasing.tsx  Knob.tsx  PlayBar.tsx  PlayButton.tsx  PressAndHold.tsx  SimpleButton.tsx  SimpleSwitch.tsx  Switch.tsx  Tooltip.tsx  index.ts  types.ts
mashup-hour-frontend/src/components/controllers/styles/: controllers.css
mashup-hour-frontend/src/components/mashup/: Mashup.tsx  MashupInfo.tsx  MashupSelector.tsx  MashupVisualizer.tsx  index.ts
mashup-hour-frontend/src/components/player/: index.ts  player.ts
mashup-hour-frontend/src/components/track/: Track.tsx  TrackInfo.tsx  TrackManipulator.tsx  TrackPlayer.tsx  TrackSampler.tsx  index.ts  types.ts
mashup-hour-frontend/src/player/: player.ts
mashup-hour-frontend/src/schemas/: mashup-hour.ts
src/: error.rs  main.rs
src/apis/: base.rs  deezer.rs  dictionary.rs  mod.rs  supabase.rs
src/assets/: manager.rs  mod.rs  models.rs  track.rs
src/mashupper/: cover.rs  manager.rs  mod.rs  track.rs  util.rs
src/mashupper/apis/: base.rs  deezer.rs  mod.rs
src/mashupper/deezer/: models.rs  util.rs
