[package]
name = "mashup-hour"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["from"] }
env_logger = "0.11.5"
actix-web = "4"
actix-files = "0.6.5"
log = "0.4.22"
rand = "0.8.5"
random_word = { version = "0.4.3", features = ["en"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
dotenv = "0.15.0"
redis = { version = "0.23.0", features = ["aio", "tokio-native-tls-comp"] }
